infra/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: runner-{replId}
  labels:
    app: runner
    replId: "{replId}"
spec:
  restartPolicy: Never
  containers:
    - name: runner
      image: bucketcode/runner-{language}:v1
      imagePullPolicy: Never
      ports:
        - containerPort: 3001
          name: ws
        - containerPort: 3000
          name: preview
      resources:
        requests:
          cpu: "0.5"
          memory: "512Mi"
        limits:
          cpu: "1"
          memory: "1Gi"
      volumeMounts:
        - name: workspace
          mountPath: /workspace
  volumes:
    - name: workspace
      emptyDir: {}
