infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-{replId}
spec:
  selector:
    replId: "{replId}"
  ports:
    - name: ws
      port: 3001
      targetPort: 3001
    - name: preview
      port: 3000
      targetPort: 3000
