infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-{replId}
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "{replId}.localtest.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-{replId}
                port:
                  number: 3000
